<resources>
    <string name="app_name">Seemy</string>
    <string name="email">Email</string>
    <string name="psw">Mot de Passe</string>
    <string name="logIn">Se connecter</string>
    <string name="signIn">Pas encore de compte ?\n Créez-en un !</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="name">Nom</string>
    <string name="prename">Prénom</string>
    <string name="psw2">Confirmation du  mot de passe</string>
    <string name="creerCompte">Créer</string>
    <string name="dejamembre">Déjà Membre ?</string>
    <string name="age">Age</string>
    <string name="rad_option1">Femme\t\t</string>
    <string name="rad_option2">Homme</string>
    <string name="pseudo">Pseudo</string>
    <string name="auth">Authentification...</string>
    <string name="inconnu">Utilisateur Inconnu</string>
    <string name="echec">Echec authentification</string>
    <string name="supper">Super !</string>
    <string name="errorValue">alphanumerique seulement(4-20)</string>
    <string name="existe">Ce pseudo existe</string>
    <string name="title_activity_main_user">MainUserActivity</string>

    <string name="navigation_drawer_open">Ouverture du navigation drawer</string>
    <string name="navigation_drawer_close">Fermeture du navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Tag">Ajouter des tags</string>
    <string name="Distance">Modifier la distance</string>
    <string name="personnesproches">Ces personnes sont près de vous</string>
    <string name="envoyer">Envoyer</string>
    <string name="majpos">Mettre à jour ma position</string>
    <string name="tag">Tag</string>
    <string name="personnesdiscuss">Vous avez discuté avec ces personnes</string>
    <string name="Notag">Vous ne possédez aucun tag</string>
    <string name="supptag">Supprimer des tags</string>
    <string name="majpos2">Mettre à jour ma position</string>
    <string name="noconnexion">Pas de connexion internet</string>
    <string name="error">Erreur</string>
    <string name="localise">Localisation à jour</string>
    <string name="nopositionaccess">L\'application n\'a pas accès à votre position</string>
    <string name="majdiscussion">Discussion à jour</string>
    <string name="addtags">Ajouter des tags</string>
    <string name="add">Ajouter</string>
    <string name="close">Fermer</string>
    <string name="supptagdialog">Choisissez les tags à supprimer:</string>
    <string name="supp">Supprimer</string>
    <string name="deleteelem">Elements supprimés</string>
    <string name="cancel">Annuler</string>
    <string name="echecsignup">Echec connexion</string>
    <string name="createacount">Création du compte...</string>
    <string name="errorBD">Erreur lors de la création en bd</string>
    <string name="connectOK">Vous pouvez vous connecter !...</string>
    <string name="missingparam">Parametre manquant</string>
    <string name="novalidadd">Entrez une adresse mail valide</string>
    <string name="passnotmatch">Mots de passe ne correspondent pas</string>
    <string name="reglerdistance">Définisseez le périmètre de recherche (en mètre):</string>
    <string name="valider">Valider</string>

    <string-array name="navigation_items">
        <item>Acceuil</item>
        <item>Profil</item>
        <item>Messages</item>
        <item>Deconnexion</item>
    </string-array>
</resources>
