<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/input_name"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:hint="@string/pseudo" />
        </android.support.design.widget.TextInputLayout>

        <!-- Age Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/input_age"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="bold"
                android:hint="@string/age" />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group1"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:textSize="20dp"
                android:id="@+id/radio_femme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option1"
                android:checked="true"
                android:textColor="#000"/>
            <RadioButton
                android:textSize="20dp"
                android:id="@+id/radio_homme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option2"
                android:textColor="#fff" />
        </RadioGroup>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/input_email"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>


                <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/input_password"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:hint="@string/psw"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/input_reEnterPassword"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:hint="@string/psw2"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/creerCompte"/>

       <TextView android:id="@+id/link_login"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/dejamembre"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dip"/>

    </LinearLayout>
</ScrollView>